11-kubernetes/k8s_oneday_실습깃헙/lab3/yaml/svc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: svc-pod
  labels:
    app: svc
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
