11-kubernetes/k8s_oneday_실습깃헙/lab3/yaml/schedule.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sc-pod
  labels:
    category: schedule
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang619/schedule
---
apiVersion: v1
kind: Service
metadata:
  name: sc-svc
spec:
  selector:
    category: schedule
  ports:
  - port: 8080
    targetPort: 80
