11-kubernetes/k8s_oneday_실습깃헙/lab3/yaml/svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  selector:
    app: svc
  ports:
  - port: 9090
    targetPort: 80
    nodePort: 30000
  type: NodePort
