11-kubernetes/k8s_oneday_실습깃헙/lab3/yaml/svc3.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc3
spec:
  selector:
    app: svc
  ports:
  - port: 9090
    targetPort: 80
  type: LoadBalancer
