11-kubernetes/k8s_oneday_실습깃헙/lab3/yaml/svc4.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc4
spec:
  type: ExternalName
  externalName: naver.com
