11-kubernetes/k8s_oneday_실습깃헙/lab3/yaml/v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: v1-pod
  labels:
    app: v1
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang619/page_v1
---
apiVersion: v1
kind: Service
metadata:
  name: v1-svc
spec:
  selector:
    app: v1
  ports:
  - port: 8080
    targetPort: 80
