11-kubernetes/k8s_oneday_실습깃헙/lab3/yaml/v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: v2-pod
  labels:
    app: v2
spec:
  containers:
  - name: container
    image: ghcr.io/wsjang619/page_v2
---
apiVersion: v1
kind: Service
metadata:
  name: v2-svc
spec:
  selector:
    app: v2
  ports:
  - port: 8080
    targetPort: 80
